store size and process for each node/file
Signed-off-by: Lehmann-Fabian <fabian.lehmann@informatik.hu-berlin.de>